--- a/src/css/main.css
+++ b/src/css/main.css
@@ -86,10 +86,13 @@ div #date {
 }
 div #team-container {
 	margin-top: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 div #team-container img {
 	display: inline;
-	padding-top: 5px;
+	padding-right: 5px;
 }
 footer {
 	background: #333;
